INFRA-327 test_widoco=1 (use "./publish.sh widoco" to test one run of widoco)